<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2023-2026 Maveniverse Org.
    All rights reserved. This program and the accompanying materials
    are made available under the terms of the Eclipse Public License v2.0
    which accompanies this distribution, and is available at
    https://www.eclipse.org/legal/epl-v20.html

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>eu.maveniverse.maven.parent</groupId>
    <artifactId>parent</artifactId>
    <version>52</version>
  </parent>

  <groupId>eu.maveniverse.maven.toolrunner</groupId>
  <artifactId>toolrunner</artifactId>
  <version>0.1.3-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>${project.groupId}:${project.artifactId}</name>
  <description>Tool Runner Maven Plugin.</description>

  <url>https://www.maveniverse.eu/toolrunner</url>

  <licenses>
    <license>
      <name>EPL-2.0</name>
      <url>https://www.eclipse.org/legal/epl-2.0/</url>
    </license>
  </licenses>

  <modules>
    <module>shared</module>
    <module>tools</module>
    <module>toolrunner</module>
    <module>extension</module>
    <module>it</module>
  </modules>

  <scm>
    <connection>scm:git:git@github.com:maveniverse/toolrunner.git</connection>
    <developerConnection>scm:git:git@github.com:maveniverse/toolrunner.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/maveniverse/toolrunner</url>
  </scm>

  <issueManagement>
    <system>Github</system>
    <url>https://github.com/maveniverse/toolrunner/issues</url>
  </issueManagement>

  <ciManagement>
    <system>Github</system>
    <url>https://github.com/maveniverse/toolrunner/actions</url>
  </ciManagement>

  <properties>
    <project.build.outputTimestamp>2026-05-07T13:17:05Z</project.build.outputTimestamp>

    <!--
    Build time: latest stable Maven and latest Java LTS.
    Run time: "not so old" Maven (3.8+) and Java 17
    -->
    <maven.compiler.release>8</maven.compiler.release>

    <!-- Dependency versions -->
    <version.shared>0.2.3</version.shared>
    <version.mima>2.4.43</version.mima>
    <version.maven>3.9.15</version.maven>
    <version.resolver>1.9.27</version.resolver>
    <version.mavenPluginTools>3.15.2</version.mavenPluginTools>
    <version.slf4j>2.0.17</version.slf4j>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Internal -->
      <dependency>
        <groupId>eu.maveniverse.maven.toolrunner</groupId>
        <artifactId>shared</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.toolrunner</groupId>
        <artifactId>extension</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.plugins</groupId>
        <artifactId>toolrunner</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.toolrunner.tools</groupId>
        <artifactId>ant</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.toolrunner.tools</groupId>
        <artifactId>gradle</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.toolrunner.tools</groupId>
        <artifactId>isx</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.toolrunner.tools</groupId>
        <artifactId>jbang</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.toolrunner.tools</groupId>
        <artifactId>jdk</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.toolrunner.tools</groupId>
        <artifactId>maven</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>eu.maveniverse.maven.shared</groupId>
        <artifactId>core</artifactId>
        <version>${version.shared}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.shared</groupId>
        <artifactId>plugin</artifactId>
        <version>${version.shared}</version>
      </dependency>

      <!-- Logging (except API, runtime only) -->
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${version.slf4j}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-simple</artifactId>
        <version>${version.slf4j}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>jcl-over-slf4j</artifactId>
        <version>${version.slf4j}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>jul-to-slf4j</artifactId>
        <version>${version.slf4j}</version>
      </dependency>

      <!-- MIMA -->
      <dependency>
        <groupId>eu.maveniverse.maven.mima</groupId>
        <artifactId>context</artifactId>
        <version>${version.mima}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.mima.runtime</groupId>
        <artifactId>embedded-maven</artifactId>
        <version>${version.mima}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.mima.runtime</groupId>
        <artifactId>standalone-static-uber</artifactId>
        <version>${version.mima}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.mima.runtime</groupId>
        <artifactId>standalone-static</artifactId>
        <version>${version.mima}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.mima.extensions</groupId>
        <artifactId>mhc4</artifactId>
        <version>${version.mima}</version>
      </dependency>

      <!-- hc4 -->
      <dependency>
        <groupId>org.apache.httpcomponents</groupId>
        <artifactId>httpclient</artifactId>
        <version>4.5.14</version>
        <exclusions>
          <exclusion>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>org.apache.httpcomponents</groupId>
        <artifactId>httpmime</artifactId>
        <version>4.5.14</version>
      </dependency>
      <dependency>
        <groupId>org.apache.httpcomponents</groupId>
        <artifactId>httpcore</artifactId>
        <version>4.4.16</version>
      </dependency>
      <dependency>
        <groupId>commons-codec</groupId>
        <artifactId>commons-codec</artifactId>
        <version>1.22.0</version>
      </dependency>

      <!-- Resolver + Maven -->
      <dependency>
        <groupId>org.apache.maven.resolver</groupId>
        <artifactId>maven-resolver-api</artifactId>
        <version>${version.resolver}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven.resolver</groupId>
        <artifactId>maven-resolver-spi</artifactId>
        <version>${version.resolver}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven.resolver</groupId>
        <artifactId>maven-resolver-util</artifactId>
        <version>${version.resolver}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-plugin-api</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-artifact</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-core</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-settings</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-settings-builder</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-model</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-model-builder</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-builder-support</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-resolver-provider</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-repository-metadata</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven.plugin-tools</groupId>
        <artifactId>maven-plugin-annotations</artifactId>
        <version>${version.mavenPluginTools}</version>
      </dependency>
      <dependency>
        <groupId>org.codehaus.plexus</groupId>
        <artifactId>plexus-utils</artifactId>
        <version>3.6.1</version>
      </dependency>
      <dependency>
        <groupId>org.codehaus.plexus</groupId>
        <artifactId>plexus-interpolation</artifactId>
        <version>1.29</version>
      </dependency>

      <dependency>
        <groupId>io.takari</groupId>
        <artifactId>takari-archiver</artifactId>
        <version>1.0.5</version>
      </dependency>

      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>6.0.3</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-plugin-plugin</artifactId>
          <version>${version.mavenPluginTools}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <parameters>true</parameters>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.eclipse.sisu</groupId>
        <artifactId>sisu-maven-plugin</artifactId>
        <version>${version.sisu}</version>
        <executions>
          <execution>
            <id>index-project</id>
            <goals>
              <goal>main-index</goal>
              <goal>test-index</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
